<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/eventItem"
    android:background="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="30dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        >
        <ImageView
            android:id="@+id/eventDeleteBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/removeItem"
            android:src="@drawable/remove_circle_outline_24"
            android:layout_gravity="center"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/eventNr"
                style="@style/TextBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventNr"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/eventLabels"
                style="@style/TextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventCategoryList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/eventNr" />

            <TextView
                android:id="@+id/eventTimestamp"
                style="@style/TextBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventTimestamp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>